# friendly-camera-journey

./: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts.timestamp-1736252142151-e23337cb624d5.mjs
BE/: README.md  image_generation copy.ipynb  image_generation.ipynb  log.csv  pyproject.toml
BE/palmist/: AI Team_Data.csv  README.md  conversion.py  echo_server.py  extract_palm_features.py  get_user_data.py  image_generation.py  index copy 2.html  index copy.html  index.html  index_base.html  main copy.py  main.py  main_base64.py  main_scipy.py  main_v2.py  prompts.py  sample.py  send_mail.py
src/: App.tsx  index.css  main.tsx
src/contexts/: WebSocketContext.tsx
src/pages/: CameraPage.module.scss  CameraPage.tsx  ChatPage.module.scss  ChatPage.tsx  FacePage.tsx  HomePage.module.scss  HomePage.tsx  InputPage.tsx  MyComponent.tsx  constants.ts  inputPage.module.scss  webSocketContext.tsx
src/pages/HomePage/: Homepage.tsx
src/pages/ThankYou/: ThankYou.tsx
